* Allow to automatically delete removed records of a O2M field
* Allow to configure required data for an export
* Allow to call ir.model.methods with lists

Version 1.3 - 2015-01-22
* Externalize batches settings into a custom .conf file referenced by
trytond.conf 'config_file' entry in a '[batch]' section.
* Revamp export / import

Version 1.2 - 2014-07-01
* Changelog file creation
* Add Event and EventType